--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
-joblib==0.13.2
-jp==0.2.4
-JPype1==0.7.0
-numpy==1.16.4
-pandas==0.25.0
-pybind11==2.3.0
-Pygments==2.4.2
-python-dateutil==2.8.0
-pytz==2019.2
-scikit-learn==0.21.3
-scipy==1.3.0
-six==1.12.0
-tabulate==0.8.3
+colorama==0.4.3
+dominate==2.4.0
+Flask==1.1.1
+Flask-Bootstrap==3.3.7.1
+idna==2.8
+itsdangerous==1.1.0
+Jinja2==2.10.3
+MarkupSafe==1.1.1
+Pillow==7.0.0
+qrcode==6.1
+requests==2.22.0
+six==1.14.0
+urllib3==1.25.8
+visitor==0.1.3
+Werkzeug==0.16.0
